--- a/vignettes/ulimit.Rmd
+++ b/vignettes/ulimit.Rmd
@@ -10,8 +10,6 @@ vignette: >
 ---
 
 
-## Rationale
-
 When experimenting in an interactive R session, it's very easy to create a problem instance where the RAM just isn't quite enough to compute the solution.  (At least it happened to me on more than one occasion.)  A somewhat trivial example, but you get the idea:
 
 
@@ -47,7 +45,7 @@ dim(matrix(nrow = N, ncol = N))
 ## Error: Swapping a huge amount of memory. Machine unusable, please reboot
 ```
 
-Unless you're equipped with 64 GiB of RAM (or more), running the last two lines will probably render your machine unusable for quite a while.  This would not happen if the memory available to R was restricted to a sensible value.
+Unless your machine is equipped with 40 GiB of RAM or more, running the last two lines will probably render it unusable for quite a while.  This would not happen if the memory available to R was restricted to a sensible value.
 
 For restricting memory, the function `memory.limit()` in the `utils` package is available.  Unfortunately, it is implemented only for Windows -- users of POSIX systems are referred to the `ulimit` functionality of the shell.  There seems to be no way to limit the memory of an *already running* process; this also applies for RStudio sessions.
 
@@ -71,3 +69,5 @@ dim(matrix(nrow = N, ncol = N))
 ```
 ## Error: cannot allocate vector of size 37.3 Gb
 ```
+
+Issue another `memory_limit` call if you need to temporarily allow for more memory usage in this R session.
