fix vignette index entry

--- a/vignettes/ulimit.Rmd
+++ b/vignettes/ulimit.Rmd
@@ -4,7 +4,7 @@ author: "Kirill Müller"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{ulimit: Limit R memory on POSIX systems}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
